--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
   flex-direction: column;
   align-items: left;
   justify-content: center;
-  padding-left: 3em;
+  padding-left: 6em;
   background-image: url(assets/bg.jpg);
   background-position: center;
   background-size: cover;
@@ -63,6 +63,7 @@ h1 {
   width: 15em;
   height: auto;
   margin-top: 0em;
+  align-items: center;
 }
 
 #fork-logo {
