--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  width: 60%;
+  width: 60vw;
   height: 100vh;
   padding-left: 1em;
 }
