--- a/style.css
+++ b/style.css
@@ -179,7 +179,8 @@ input[type="submit"]:hover {
 
 .signup-link a {
   text-decoration: none;
-  font-size: 1em;
+  font-size: 0.9em;
+  font-weight: 400;
 }
 
 .footer {
