--- a/style.css
+++ b/style.css
@@ -174,12 +174,13 @@ input[type="submit"]:hover {
 .signup-link {
   margin-top: 1.2em;
   text-align: center;
-  font-size: 0.9em;
+  font-size: 0.7em;
+  font-weight: 400;
 }
 
 .signup-link a {
   text-decoration: none;
-  font-size: 0.9em;
+  font-size: 0.7em;
   font-weight: 400;
 }
 
