--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: left;
+  justify-content: center;
   padding-left: 6em;
   background-image: url(assets/bg.jpg);
   background-position: center;
