--- a/style.css
+++ b/style.css
@@ -188,6 +188,7 @@ input[type="submit"]:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   text-align: center;
   font-size: 0.9em;
   margin-top: 7em;
