--- a/style.css
+++ b/style.css
@@ -200,6 +200,7 @@ input[type="submit"]:hover {
   justify-content: center;
   align-items: center;
   margin-bottom: 0.5em;
+  margin-left: 10em;
 }
 
 .footer-links a {
