--- a/style.css
+++ b/style.css
@@ -182,6 +182,7 @@ input[type="submit"]:hover {
   text-decoration: none;
   font-size: 1em;
   font-weight: 400;
+  color: #999;
 }
 
 .footer {
@@ -200,7 +201,7 @@ input[type="submit"]:hover {
   justify-content: center;
   align-items: center;
   margin-bottom: 0.5em;
-  margin-left: 10em;
+  margin-left: 6em;
 }
 
 .footer-links a {
