--- a/style.css
+++ b/style.css
@@ -201,7 +201,7 @@ input[type="submit"]:hover {
   justify-content: center;
   align-items: center;
   margin-bottom: 0.5em;
-  /*margin-left: 6em;*/
+  margin-left: 0em;
 }
 
 .footer-links a {
