--- a/style.css
+++ b/style.css
@@ -222,6 +222,7 @@ input[type="submit"]:hover {
 .footer-links p {
   width: 10em;
   cursor: pointer;
+  margin-left: 5em;
   font-weight: 600;
   text-align: center;
   font-style: normal;
