--- a/style.css
+++ b/style.css
@@ -230,6 +230,7 @@ input[type="submit"]:hover {
 .footer-links p {
   width: 10em;
   margin-left: 8em;
+  margin-right: -1em;
   cursor: pointer;
   font-weight: 600;
   text-align: center;
