--- a/style.css
+++ b/style.css
@@ -211,7 +211,7 @@ input[type="submit"]:hover {
   color: #127167;
   margin: 0;
   width: 20em;
-  margin-left: -2em;
+  margin-left: -4em;
   text-align: center;
   font-weight: 700;
 }
@@ -235,6 +235,10 @@ input[type="submit"]:hover {
   font-weight: 600;
   text-align: center;
   font-style: normal;
+}
+
+.second {
+  font-weight: normal;
 }
 
 .copyright {
