--- a/style.css
+++ b/style.css
@@ -287,6 +287,7 @@ input[type="submit"]:hover {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-left: 0em;
   }
 
   input[type="submit"] {
