--- a/style.css
+++ b/style.css
@@ -260,8 +260,11 @@ input[type="submit"]:hover {
   }
 
   .right {
-    padding-left: 2em;
-    padding-right: 2em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-left: 0em;
   }
 
   #manager-logo {
